# agent-director

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  FRONTEND_REVIEW.md  GAPS.md  LICENSE  Makefile  PLANS.md  QUESTIONS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GATES.md  SCORECARDS.md  SECURITY.md  TASKS.md  TESTING.md  WORLD_CLASS_RELEASE_TODO.md  agent-director-playbook-perfect.md  agent-director-summary-perfect.md  help.html  index.html  package.json  pnpm-lock.yaml  pyproject.toml  robots.txt  sitemap.xml  vercel.json
.codex/: PLANS.md  SCRATCHPAD.md
.devcontainer/: devcontainer.json
assets/: index-1fqO9gMz.js  index-4Jq-TV_T.js  index-5rKdSDXl.css  index-6F-OPHqP.js  index-6jfK-jAT.css  index-8m646CF7.css  index-9K3HYD4t.js  index-B-xryvJs.js  index-B2u9VzUV.js  index-B4u8htBM.js  index-B570_Gdt.js  index-B5FwJtWe.js  index-B5tYtwlT.js  index-B64owC2L.js  index-B6jkHtIc.js  index-B6pmdpDO.js  index-B6yZ-t4w.css  index-B9kT70-r.js  index-BB-yZ_Hw.js  index-BB66pQoa.js  index-BB9eDbgG.css  index-BD9Sh2bW.js  index-BDydkWzg.css  index-BG-qU3gm.css  index-BGbV498z.js  index-BHyqzpWM.js  index-BJ8ddJ60.js  index-BLOKtuzH.js  index-BMSGXMz2.js  index-BRP7CN14.js  index-BS0oCvFz.js  index-BUKj4lxY.js  index-BW5l2W6Z.js  index-BXRJTS9D.js  index-BYbFnm15.js  index-BZYUrg3I.css  index-B_yK5jxq.js  index-BakO8Dj7.js  index-Bbt6fEgu.js  index-Bclk9MBs.js  (+179 more)
demo/: README.md
docs/: api-reference.md  architecture.md  brand.md  demo-script-teleprompter.txt  demo-script.md  executive-summary.md  gameplay-core-loop.md  getting-started.md  hosting.md  index.md  ux.md  (+20 more)
(+267 files in other folders)
